uc-593 update translations

--- a/AGE System/translations/fr.json
+++ b/AGE System/translations/fr.json
@@ -153,7 +153,7 @@
    "show-the-ammo-column-info": "Show the Ammo column. This can be hidden for Blue Rose.",
    "show-the-money/currency-section-info": "Show the Money/Currency section. This can be hidden for Blue Rose.",
    "origin-u": "ORIGINE",
-   "drive-u": "DRIVE",
+   "drive-u": "CONDUITE",
    "profession-u": "PROFESSION",
    "appearance-u": "APPARENCE",
    "belter": "Ceinturien",
@@ -161,7 +161,7 @@
    "earther": "Terrien",
    "fortune-u": "CHANCE",
    "outsider": "Extérieur",
-   "lower-class": "Lower Class",
-   "middle-class": "Middle Class",
-   "upper-class": "Upper Class"
+   "lower-class": "Basse classe",
+   "middle-class": "Classe moyenne",
+   "upper-class": "Classe favorisée"
 }
