--- a/Forbidden_Lands/translations/fr.json
+++ b/Forbidden_Lands/translations/fr.json
@@ -9,17 +9,22 @@
 	"api-dice-title": "Utilisez API Dice Roller (API est une fonctionnalité Pro). Le Script « Forbidden Lands Year-Zero Die Roller » doit être installé.",
 	"appearance-u": "APPARENCE",
 	"armor": "Armure",
+	"armor-bonus": "Record the armor's CURRENT bonus (adjusts GEAR dice). @{armor1_bonus} || @{armor2_bonus}",
+	"armor-bonus-max": "Record the armor's UNDAMAGED bonus. @{armor1_bonus_max} || @{armor2_bonus_max}",
+	"armor-bonus-misc": "Miscellaneous bonus modifier (adjusts GEAR dice). @{armor1_damage} || @{armor2_damage}",
+	"armor-bonus-total": "Total GEAR dice included for armor. @{armor1_ar} || @{armor2_ar}",
 	"armor-helmet": "ARMURE/HEAUME",
 	"armor-rating": "Indice d'armure",
 	"armor-rating-abbr": "IA",
 	"armor-rating-u": "INDICE D'ARMURE",
 	"armor-roll": "Jet d'armure",
+	"armor-type": "Armor Type",
 	"arms-length-abbr": "Long. Bras",
 	"arrows": "Flèches",
 	"artifact": "Artéfact",
 	"artifact-bonus": "Bonus d'artefact",
 	"attack": "Attaque",
-	"attack-abbrv": "Attk",
+	"attack-abbrv": "Attq",
 	"attr-abbr": "Attr",
 	"attribute-score": "Score d'attribut",
 	"attribute-u": "ATTRIBUTS",
@@ -45,22 +50,22 @@
 	"coins-carried": "Argent transporté",
 	"coins-u": "ARGENT",
 	"cold": "Frigorifié",
-	"condition-hungry": "You must eat a ration of food at least once every day. After a day without food, you become HUNGRY. @{hungry}",
-	"condition-thirsty": "You must drink a ration of water at least once per day. After a day without water, you become THIRSTY. @{thirsty}",
-	"condition-sleepy": "You need to sleep for at least one Quarter Day of each day. After one day without sleep, you become SLEEPY. @{sleepy}",
-	"condition-cold": "When the cold is bitter and you don’t have enough shelter, you have to roll ENDURANCE regularly. @{cold}",
+	"condition-cold": "Lorsque le froid est glacial et que vous n'avez pas assez d'abris, vous devez faire des tests d'ENDURANCE régulièrement. @{cold}",
+	"condition-hungry": "Vous devez manger une ration de nourriture au moins une fois par jour. Après un jour sans nourriture, vous devenez AFFAMÉ. @{hungry}",
+	"condition-sleepy": "Vous devez dormir au moins 6 heures par jour. Après une journée sans dormir, vous devenez SOMNOLENT. @{sleepy}",
+	"condition-thirsty": "Vous devez boire une ration d'eau au moins une fois par jour. Après un jour sans eau, vous devenez ASSOIFFÉ. @{thirsty}",
 	"condition-u": "CONDITIONS",
 	"consumable": "Consommable",
 	"consumable-note": "**note** assurez vous de réduire manuellement le dé consommable sur la feuille si vous lancez le dé de fléau.",
 	"consumable-u": "CONSOMMABLES",
 	"copper": "Cuivre",
 	"crafting": "Artisanat",
-	"crafting-monster": "Crafting",
+	"crafting-monster": "Artisanat",
 	"critical-injuries": "Blessures Critique",
 	"critical-u": "BLESSURES CRITIQUES",
 	"current": "Actuel",
 	"current-preset": "Sélection actuelle",
-	"custom-roll": "Custom Roll",
+	"custom-roll": "Jet modifié",
 	"d66-roll": "Jet du D66",
 	"damage": "Dégâts",
 	"damage-abbr": "Dég",
@@ -84,7 +89,7 @@
 	"endurance-monster": "Endurance",
 	"epic": "Épique",
 	"experience-u": "EXPÉRIENCE",
-	"extra-damage": "Toggle extra damage tracking (25-48)",
+	"extra-damage": "Basculer le suivi des dégâts extra (25-48)",
 	"face": "Visage",
 	"features": "Fonctionnalités",
 	"fish": "Poisson",
@@ -131,10 +136,11 @@
 	"max-abbr": "Max",
 	"meat": "Viande",
 	"melee": "Mêlée",
-	"melee-monster": "Melee",
+	"melee-monster": "Mêlée",
 	"might": "Puissance",
-	"might-monster": "Might",
+	"might-monster": "Puissance",
 	"mighty": "Puissant",
+	"misc-abbr": "Misc",
 	"monster": "Monstre",
 	"monster-attack": "Attaque du monstre",
 	"monster-attacks-u": "ATTAQUES DU MONSTRE",
@@ -144,6 +150,7 @@
 	"mounted": "Monté",
 	"mounts-gear": "Fontes de la monture",
 	"move": "Manœuvres",
+	"move-type": "Move Type",
 	"movement": "Mouvement",
 	"name": "Nom",
 	"near": "Près",
@@ -157,20 +164,20 @@
 	"notes": "Notes",
 	"notes-u": "NOTES",
 	"number-abbr": "Nb",
-	"of-food": "de nourriture",
-	"of-water": "d'eau",
 	"of-arrows": "de flèches",
+	"of-food": "de nourriture",
 	"of-torches": "de torches",
+	"of-water": "d'eau",
 	"old-3": "Vieux +2",
 	"old-announcements": "Vielles annonces",
 	"older": "[anciennes]",
 	"on-mount": "Sur la monture",
 	"one-hand-abbr": "1M",
 	"other": "Autre",
-	"out-of-food": "Sans nourriture",
-	"out-of-water": "Sans eau",
 	"out-of-arrows": "Sans flèches",
+	"out-of-food": "Sans nourriture",
 	"out-of-torches": "Sans torches",
+	"out-of-water": "Sans eau",
 	"pack-rat": "Talent d'accumulateur compulsif?",
 	"pack-rat-title": "Vous pouvez porter des items supplémentaires.",
 	"parry": "Parade",
@@ -178,7 +185,7 @@
 	"performance": "Représentation",
 	"personal": "Personnel",
 	"pride": "Fierté",
-	"pride-roll": "Pride Roll",
+	"pride-roll": "Jet de Fierté",
 	"production-outcome": "Production/Résultat",
 	"prof": "Prof",
 	"profession": "Profession",
@@ -188,15 +195,17 @@
 	"pushes-the-roll": "Pousser les dés ",
 	"quantity-abbr": "Qté",
 	"range": "Portée",
+	"ranged": "Ranged",
 	"rank": "Rang",
 	"rank-1-pack-rat": "Rang 1 (+2)",
 	"rank-2-pack-rat": "Rang 2 (+5)",
 	"rank-3-pack-rat": "Rang 3 (+10)",
 	"rating": "Indice",
-	"rating-abbr": "Rat",
+	"rating-abbr": "Eval",
 	"relationship-description": "Décrit la relation.",
 	"relationships-u": "RELATIONS",
 	"reputation": "Réputation",
+	"reputation-bonus": "How well known are you? @{reputation}",
 	"reputation-roll": "Jet de Réputation",
 	"reset-dice": "Réinitialiser la réserve de dés.",
 	"roll": " Jet ",
@@ -206,9 +215,12 @@
 	"salary": "Salaire",
 	"scouting": "Éclaireur",
 	"selected": "Sélectionné ",
-	"settings": "Settings",
+	"settings": "Paramètres",
 	"sheet-version-announcements": "Version de la fiche et annonces",
 	"shield": "Bouclier",
+	"shield-bonus-max": "Record the shield's UNDAMAGED bonus. @{shield1_bonus_max}",
+	"shield-bonus-misc": "Miscellaneous bonus modifier (adjusts GEAR dice). @{shield1_bonus_misc}",
+	"shield-bonus-total": "Total GEAR dice included for Parry|Shove. @{shield1_bonus_total}",
 	"shield-u": "BOUCLIER",
 	"short": "Court",
 	"shove": "Pousser",
@@ -259,16 +271,27 @@
 	"weapon": "Arme",
 	"weapon-bonus": "Enregistre les bonus actuels de l'arme. @{repeating_weapons_$X_weapon_bonus}",
 	"weapon-bonus-max": "Enregistre les bonus non réduits de l'arme. @{repeating_weapons_$X_weapon_bonus|max}",
+	"weapon-bonus-misc": "Miscellaneous bonus modifier (adjusts GEAR dice). @{repeating_weapons_$X_weapon_bonus_misc}",
+	"weapon-bonus-total": "Total GEAR dice included with the attack. @{repeating_weapons_$X_weapon_bonus_total}",
+	"weapon-damage": "Damage as per weapon tables. @{repeating_weapons_$X_weapon_damage}",
+	"weapon-damage-misc": "Miscellaneous damage modifier. @{repeating_weapons_$X_weapon_damage_misc}",
+	"weapon-damage-total": "Total damage included with the attack. @{repeating_weapons_$X_weapon_damage_total}",
+	"weapon-skill-misc": "Miscellaneous attack modifier (adjusts SKILL dice). @{repeating_weapons_$X_weapon_skill_misc}",
+	"weapon-skill-total": "Total SKILL dice included with the attack. @{repeating_weapons_$X_weapon_skill_total}",
+	"weapon-type-base": "BASE dice as per weapon/skill type. @{repeating_weapons_$X_weapon_base_total}",
+	"weapon-type-skill": "SKILL dice as per weapon/skill type. @{repeating_weapons_$X_weapon_skill_value}",
 	"weapon-u": "ARMES",
 	"weapons": "Armes",
 	"weight-abbr": "Pds",
-	"whisper-options": "Whisper Options:",
-	"whisper-options-api": "API Whisper Options:",
-	"whisper-nothing": "Do not whisper rolls(default).",
-	"whisper-rolls": "Whisper all rolls to the GM.",
-	"whisper-query": "Use a query.",
+	"whisper-nothing": "Ne pas murmurer les jets (défaut).",
+	"whisper-options": "Options de murmure :",
+	"whisper-options-api": "Options d'API murmure :",
+	"whisper-query": "Demander.",
+	"whisper-rolls": "Murmurer tous les jets au MJ.",
 	"willpower": "Volonté",
 	"willpower-abbr": "Vol",
+	"willpower-spent-abbr": "WP Spent",
+	"willpower-total-abbr": "Total WP",
 	"willpower-u": "VOLONTÉ",
 	"wits": "Esprit",
 	"wits-abbr": " [esp]",
