--- a/L5R 5th Edition Unofficial/translations/es.json
+++ b/L5R 5th Edition Unofficial/translations/es.json
@@ -1,32 +1,32 @@
 {
-	"character-name-u": "Character Name",
-	"player-name-u": "Player Name",
+	"character-name-u": "Nombre del personaje",
+	"player-name-u": "Nombre del jugador",
 	"clan-u": "Clan",
-	"family-u": "Family",
-	"school-u": "School",
-	"school-rank-u": "School Rank",
+	"family-u": "Familia",
+	"school-u": "Escuela",
+	"school-rank-u": "N. escuela",
 	"roles-u": "Roles",
-	"honour-u": "Honour",
-	"glory-u": "Glory",
+	"honour-u": "Honor",
+	"glory-u": "Gloria",
 	"status-u": "Status",
-	"advantages-disadvantages-u": "Advantages and Disadvantages",
-	"skills-u": "Skills",
-	"techniques-u": "Techniques",
-	"equipment-u": "Equipment",
-	"endurance-u": "Endurance",
-	"fatigue-u": "Fatigue",
-	"composure-u": "Composure",
-	"strife-u": "Strife",
-	"focus-u": "Focus",
-	"vigilance-u": "Vigilance",
-	"void-points-u": "Void Points",
-	"air-u": "Air",
-	"earth-u": "Earth",
-	"fire-u": "Fire",
-	"water-u": "Water",
-	"void-u": "Void",
-	"current-u": "Current",
-	"max-u": "Max",
+	"advantages-disadvantages-u": "Ventajas y desventajas",
+	"skills-u": "Habilidades",
+	"techniques-u": "Técnicas",
+	"equipment-u": "Equipo",
+	"endurance-u": "Aguante",
+	"fatigue-u": "Fatiga",
+	"composure-u": "Compostura",
+	"strife-u": "Conflicto",
+	"focus-u": "Concentración",
+	"vigilance-u": "Alerta",
+	"void-points-u": "Puntos de Vacío",
+	"air-u": "Aire",
+	"earth-u": "Tierra",
+	"fire-u": "Fuego",
+	"water-u": "Agua",
+	"void-u": "Vacío",
+	"current-u": "Actual",
+	"max-u": "Máx",
 	"ninjo-u": "Ninjo",
 	"giri-u": "Giri",
 	"distinctions-u": "Distinctions",
@@ -34,91 +34,91 @@
 	"passions-u": "Passions",
 	"anxieties-u": "Anxieties",
 	"personality-habits-quirks-u": "Personality, Habits & Quirks",
-	"stances-u": "Stances",
-	"stances-text-u": "(Stances can only be applied during conflicts)",
+	"stances-u": "Actitudes",
+	"stances-text-u": "(Las actitudes sólo se aplican durante los enfrentamientos)",
 	"air-stance-u": "AIR STANCE:",
 	"earth-stance-u": "EARTH STANCE:",
 	"fire-stance-u": "FIRE STANCE:",
 	"water-stance-u": "WATER STANCE:",
 	"void-stance-u": "VOID STANCE:",
-	"air-stance-text-u": "+1 to TN of Attack and Scheme checks targeting you (+2 at rank 4+).",
-	"earth-stance-text-u": "Others cannot spend opportunity to inflict critical strikes or conditions on you.",
-	"fire-stance-text-u": "If you succeed, +1 bonus success per strife-symbol.",
-	"water-stance-text-u": "Perform a second action on your turn that does not require a check or share a type with your first action.",
-	"void-stance-text-u": "You do not receive strife from strife-symbols on checks",
-	"name-u": "Name",
-	"rank-u": "Rank",
-	"bonus-u": "Bonus",
-	"artisan-u": "Artisan",
-	"aesthetics-u": "Aesthetics",
-	"composition-u": "Composition",
-	"design-u": "Design",
-	"smithing-u": "Smithing",
+	"air-stance-text-u": "Incrementa en 1 el NO de todas las tiradas que te tengan como objetivo (+2 a nivel 4+).",
+	"earth-stance-text-u": "Los oponentes no pueden gastar Oportunidades para hacerte impactos críticos o condiciones.",
+	"fire-stance-text-u": "Puedes contar los resultados de Conflicto en una tirada con éxito como éxitos adicionales.",
+	"water-stance-text-u": "Puedes ejecutar una acción adicional para la que no haga falta tirada o sea del mismo tipo que tu primera acción.",
+	"void-stance-text-u": "No acumulas puntos de Conflicto al obtener resultados de Conflicto",
+	"name-u": "Nombre",
+	"rank-u": "Nivel",
+	"bonus-u": "Bonificador",
+	"artisan-u": "Artesanales",
+	"aesthetics-u": "Estética",
+	"composition-u": "Composición",
+	"design-u": "Diseño",
+	"smithing-u": "Herrería",
 	"refine-u": "Refine",
 	"restore-u": "Restore",
 	"invent-u": "Invent",
 	"adapt-u": "Adapt",
 	"attune-u": "Attune",
-	"social-u": "Social",
-	"command-u": "Command",
-	"courtesy-u": "Courtesy",
-	"games-u": "Games",
-	"performance-u": "Performance",
+	"social-u": "Sociales",
+	"command-u": "Mando",
+	"courtesy-u": "Cortesía",
+	"games-u": "Pasatiempos",
+	"performance-u": "Interpretación",
 	"trick-u": "Trick",
 	"reason-u": "Reason",
 	"incite-u": "Incite",
 	"charm-u": "Charm",
 	"enlighten-u": "Enlighten",
-	"trade-u": "Trade",
-	"commerce-u": "Commerce",
-	"labor-u": "Labor",
-	"seafaring-u": "Seafaring",
-	"skulduggery-u": "Skulduggery",
-	"survival-u": "Survival",
+	"trade-u": "Mercantiles",
+	"commerce-u": "Comercio",
+	"labor-u": "Trabajo manual",
+	"seafaring-u": "Navegación",
+	"skulduggery-u": "Actividad Criminal",
+	"survival-u": "Supervivencia",
 	"con-u": "Con",
 	"produce-u": "Produce",
 	"innovate-u": "Innovate",
 	"exchange-u": "Exchange",
 	"subsist-u": "Subsist",
-	"martial-u": "Martial",
-	"fitness-u": "Fitness",
-	"ma-melee-u": "Martial Arts [Melee]",
-	"ma-ranged-u": "Martial Arts [Ranged]",
-	"ma-unarmed-u": "Martial Arts [Unarmed]",
-	"meditation-u": "Meditation",
-	"tactics-u": "Tactics",
+	"martial-u": "Marciales",
+	"fitness-u": "Aptitud física",
+	"ma-melee-u": "Artes marciales [C.a.C.]",
+	"ma-ranged-u": "Artes marciales [Dist.]",
+	"ma-unarmed-u": "Artes marciales [Sin. arm.]",
+	"meditation-u": "Meditación",
+	"tactics-u": "Estrategía",
 	"feint-u": "Feint",
 	"withstand-u": "Withstand",
 	"overwhelm-u": "Overwhelm",
 	"shift-u": "Shift",
 	"sacrifice-u": "Sacrifice",
-	"scholar-u": "Scholar",
-	"culture-u": "Culture",
-	"government-u": "Government",
-	"medicine-u": "Medicine",
-	"sentiment-u": "Sentiment",
-	"theology-u": "Theology",
+	"scholar-u": "Académicas",
+	"culture-u": "Cultura",
+	"government-u": "Gobierno",
+	"medicine-u": "Medicina",
+	"sentiment-u": "Sentimiento",
+	"theology-u": "Teología",
 	"analyze-u": "Analyze",
 	"recall-u": "Recall",
 	"theorize-u": "Theorize",
 	"survey-u": "Survey",
 	"sense-u": "Sense",
-	"explosive-success-u": "Explosive Success",
-	"opportunity-u": "Opportunity",
-	"success-u": "Success",
-	"total-xp-u": "Total XP",
-	"spent-xp-u": "Spent XP",
-	"saved-xp-u": "Saved XP",
+	"explosive-success-u": "Éxito relanzable",
+	"opportunity-u": "Oportunidad",
+	"success-u": "Éxito",
+	"total-xp-u": "PE totales",
+	"spent-xp-u": "PE gastados",
+	"saved-xp-u": "PE guardados",
 	"advancement-u": "Advancement",
-	"skill-u": "Skill",
-	"ring-u": "Ring",
-	"technique-u": "Technique",
-	"exp-cost-u": "Exp Cost",
+	"skill-u": "Habilidad",
+	"ring-u": "Anillo",
+	"technique-u": "Técnica",
+	"exp-cost-u": "Coste Exp",
 	"skill-cost-u": "2 x New Level",
 	"ring-cost-u": "3 x New Level",
 	"technique-cost-u": "3 (unless specified)",
-	"restrictions-u": "Restrictions",
-	"skill-restricitons-u": "Maximum value 5",
+	"restrictions-u": "Restricciones",
+	"skill-restricitons-u": "Valor máximo 5",
 	"ring-restricitons-u": "Max = Void + lowest ring",
 	"technique-restricitons-u": "Observe School and technique restriction",
 	"rank-1-u": "Rank 1",
@@ -154,24 +154,24 @@
 	"techniques-opportunities-u": "Techniques (New Actions)",
 	"activation-u": "Activation(Action/Check):",
 	"check-u": "Check:",
-	"weapons-u": "Weapons",
+	"weapons-u": "Armas",
 	"damage-deadliness-u": "Damage/Deadliness",
 	"range-u": "Range",
 	"qualities-u": "Qualities",
-	"armor-u": "Armor",
+	"armor-u": "Armadura",
 	"protection-type-resistance-u": "Protection Type (Resistance)",
 	"equipment-relationships-notes-u": "Equipment, Relationships & Notes",
-	"roll-ring-dice-u": "Roll Ring Dice",
-	"roll-skill-dice-u": "Roll Skill Dice",
-	"ring-dice-u": "Ring Dice",
-	"skill-dice-u": "Skill Dice",
-	"roll-explosive-dice-u": "To roll explosive die, click 'Roll Ring/Skill Dice' button on your sheet",
-	"keep-up-to-u": "Keep up to",
+	"roll-ring-dice-u": "T. dados anillo",
+	"roll-skill-dice-u": "T. dados hab.",
+	"ring-dice-u": "Dados anillo",
+	"skill-dice-u": "Dados habilidad",
+	"roll-explosive-dice-u": "Para tirar dados relanzables, clica en el botón de \"Tirar dados anillo/habilidad\" de tu hoja",
+	"keep-up-to-u": "Guarda hasta",
 	"activation:-u": "Activation: ",
 	"check:-u": "Check:",
 	"effects:-u": "Effects:",
 	"opportunities:-u": "Opportunities:",
-	"dice-u": "dice",
+	"dice-u": "dados",
 	"print-technique-u": "Print technique in chat",
 	"part-1-u": "PART I: CORE IDENTITY (CLAN & FAMILY)",
 	"part-2-u": "PART II: ROLE & SCHOOL",
@@ -250,11 +250,11 @@
 	"koku-u": "Koku",
 	"bu-u": "Bu",
 	"zeni-u": "Zeni",
-	"wealth-u": "Wealth",
+	"wealth-u": "Riqueza",
 	"wealth-conversion-koku-rice-u": "1 Koku = 1 year of rice",
 	"wealth-conversion-koku-bu-u": "1 Koku = 5 Bu",
 	"wealth-conversion-bu-zeni-u": "1 Bu = 10 Zeni",
-	"relationships-u": "Relationships",
+	"relationships-u": "Relaciones",
 	"notes-u": "Notes",
 	"character-description-u": "Character description",
 	"demeanor-ambitious-u": "Ambitious - Fire +2, Water -2",
@@ -272,7 +272,7 @@
 	"demeanor-territorial-u": "Territorial - Fire +2, Air -2",
 	"demeanor-custom-u": "Custom demeanor",
 	"choose-demeanor-u": "Choose demeanor",
-	"dice-rolling-u": "Dice rolling",
+	"dice-rolling-u": "Tirar dados",
 	"action-parentheses-u": "(Action)",
 	"opportunity-parentheses-u": "(Opportunity)",
 	"activation-box-u": "Requirement for activation",
