--- a/Pathfinder Community/translations/fr.json
+++ b/Pathfinder Community/translations/fr.json
@@ -83,7 +83,7 @@
 	"add-skill-bonus-macro": "Ajouter la macro de bonus de compétences ?",
 	"add-template": "Mettre à jour rapidement le personnage avec l'archétype",
 	"additional-attack-macro-query-included-with-crits": "Additional Attack Macro/Query (included with crits)",
-	"additional-damage": "Extra Dmg",
+	"additional-damage": "Dégâts supplémentaires",
 	"additional-damage-macro-query-included-with-crits": "Additional Damage Macro/Query (included with crits)",
 	"additional-damage-title": "Ajouter des dégâts additionnels, de précision ou de critique supplémentaires",
 	"additional-modifier-or-macro": "Additional modifier or macro, e.g. [[1d6]], [[2d20k1]], etc.",
@@ -310,9 +310,9 @@
 	"buff-haste-note": "Lors d'une attaque à outrance, une créature rapide peut faire une attaque supplémentaire avec une arme naturelle ou fabriquée. La vitesse de tous les modes de mouvement augmente.",
 	"buff-heroism": "Héroïsme",
 	"buff-initiative-title": "Bonus à l’Initiative",
-	"buff-inspire-courage": "Inspirer le courage",
+	"buff-inspire-courage": "Inspiration vaillante",
 	"buff-inspire-courage-note": "+ @{b2_val} bonus de moral aux jets de sauvegarde contre les effets de charme et de peur.",
-	"buff-inspire-greatness": "Inspirer la grandeur",
+	"buff-inspire-greatness": "Inspiration glorieuse",
 	"buff-inspired-rage": "Rage inspirée",
 	"buff-inspired-rage-note": "**Inspired Rage**, allies other than the skald cannot use any Charisma-, Dexterity-, or Intelligence-based skills (except Acrobatics, Fly, Intimidate, and Ride) or any ability that requires patience or concentration.",
 	"buff-intelligence-based-skills-penalty-title": "Pénalité aux jets de compétence basés sur l'intelligence",
@@ -900,7 +900,7 @@
 	"extra-critical-damage-title": "Dégâts Critiques Supplémentaires",
 	"extra-damage": "Dégâts Non-Crits supp",
 	"extra-damage-condition": "Dégâts supplémentaires conditionnels, en combattant à deux armes, éventration, etc",
-	"extra-damage-or-attack-modifiers": "Dégâts supplémentaires ou Modificateurs d'Attaque",
+	"extra-damage-or-attack-modifiers": "Dégâts supplémentaires ou modificateurs d'attaque",
 	"extra-damage-section": "Extra Damage (non critical and critical only)",
 	"extra-ranks": "Rangs supplémentaires :",
 	"extraordinary-abbrv": "Ext",
@@ -1554,8 +1554,8 @@
 	"power-point-reserve-abbrv": "Réserve de PP",
 	"pre-v1": "Prev 1.0",
 	"precision-abbrv": "Dégâts supp",
-	"precision-damage-title": "Dégâts Supplémentaires ou de Précision (pas ajouté aux dégâts critiques)",
-	"precision-damage-type": "Type de Dégâts Supplémentaires",
+	"precision-damage-title": "Dégâts supplémentaires ou de précision (pas ajouté aux dégâts critiques)",
+	"precision-damage-type": "Type de dégâts supplémentaires",
 	"prepared": "Préparé",
 	"prepared-manual": "Suivi Manuel Préparé",
 	"prepared-spells-explanation": "On prepared casters, spells with a positive number in uses are considered 'prepared', uses represents the number of times memorized and usable that are left.",
@@ -1642,7 +1642,7 @@
 	"reset": "Réinit.",
 	"resistance": "Resistance",
 	"resistance-abbrv": "Résistance",
-	"resistances": " Resistances",
+	"resistances": "Résistances",
 	"resistances-title": "Ignores some damage of the indicated type each time it takes damage of that kind. (e.g. acid 10)",
 	"resolute": "Resolute",
 	"ride": "Équitation",
@@ -1702,13 +1702,13 @@
 	"select-spell-resistance-default": "Sélectionner RM",
 	"sense-motive": "Psychologie",
 	"senses": "Sens",
-	"set-armor": "Set Armor",
+	"set-armor": "Créer armure",
 	"set-as-armor": "Définir les valeurs de l'armure par les caractéristiques de cet équipement",
 	"set-as-shield": "Définir les valeurs du bouclier par cet équipement",
 	"set-buffs": "Gérer les altérations",
 	"set-on-equipment": "Configuré sur l'onglet Équipement",
 	"set-sheet-color": "Set sheet color to rolltemplate color",
-	"set-shield": "Set Shield",
+	"set-shield": "Créer bouclier",
 	"settings": "Paramètres",
 	"sheet-configuration": "Configuration de la feuille",
 	"sheet-created-after-v1": "Sheet created at version 1.00 or later",
