--- a/Forbidden_Lands/translations/ru.json
+++ b/Forbidden_Lands/translations/ru.json
@@ -9,11 +9,16 @@
 	"api-dice-title": "Использовать API Бросков кубиков (API доступен в Pro подписке). Должен быть установлен скрипт 'Forbidden Lands Year-Zero Die Roller'.",
 	"appearance-u": "ВНЕШНОСТЬ",
 	"armor": "Доспех",
+	"armor-bonus": "Record the armor's CURRENT bonus (adjusts GEAR dice). @{armor1_bonus} || @{armor2_bonus}",
+	"armor-bonus-max": "Record the armor's UNDAMAGED bonus. @{armor1_bonus_max} || @{armor2_bonus_max}",
+	"armor-bonus-misc": "Miscellaneous bonus modifier (adjusts GEAR dice). @{armor1_damage} || @{armor2_damage}",
+	"armor-bonus-total": "Total GEAR dice included for armor. @{armor1_ar} || @{armor2_ar}",
 	"armor-helmet": "ДОСПЕХ/ШЛЕМ",
 	"armor-rating": "Armor Rating",
 	"armor-rating-abbr": "РД",
 	"armor-rating-u": "ARMOR RATING",
 	"armor-roll": "Проверка доспеха",
+	"armor-type": "Armor Type",
 	"arms-length-abbr": "Arm's L.",
 	"arrows": "Стрелы",
 	"artifact": "Артефакт",
@@ -45,10 +50,10 @@
 	"coins-carried": "Coins Carried",
 	"coins-u": "COINS",
 	"cold": "Cold",
-	"condition-hungry": "You must eat a ration of food at least once every day. After a day without food, you become HUNGRY. @{hungry}",
-	"condition-thirsty": "You must drink a ration of water at least once per day. After a day without water, you become THIRSTY. @{thirsty}",
-	"condition-sleepy": "You need to sleep for at least one Quarter Day of each day. After one day without sleep, you become SLEEPY. @{sleepy}",
 	"condition-cold": "When the cold is bitter and you don’t have enough shelter, you have to roll ENDURANCE regularly. @{cold}",
+	"condition-hungry": "You must eat a ration of food at least once every day. After a day without food, you become HUNGRY. @{hungry}",
+	"condition-sleepy": "You need to sleep for at least one Quarter Day of each day. After one day without sleep, you become SLEEPY. @{sleepy}",
+	"condition-thirsty": "You must drink a ration of water at least once per day. After a day without water, you become THIRSTY. @{thirsty}",
 	"condition-u": "CONDITIONS",
 	"consumable": "Consumable",
 	"consumable-note": "**note:** be sure to manually reduce the consumable die on the sheet if you roll bane.",
@@ -135,6 +140,7 @@
 	"might": "Might",
 	"might-monster": "Might",
 	"mighty": "Mighty",
+	"misc-abbr": "Misc",
 	"monster": "Monster",
 	"monster-attack": "Monster Attack",
 	"monster-attacks-u": "MONSTER ATTACKS",
@@ -144,6 +150,7 @@
 	"mounted": "Mounted",
 	"mounts-gear": "Mount's Gear",
 	"move": "Move",
+	"move-type": "Move Type",
 	"movement": "Movement",
 	"name": "Name",
 	"near": "Near",
@@ -157,20 +164,20 @@
 	"notes": "Notes",
 	"notes-u": "NOTES",
 	"number-abbr": "Num",
-	"of-food": "of Food",
-	"of-water": "of Water",
 	"of-arrows": "of Arrows",
+	"of-food": "of Food",
 	"of-torches": "of Torches",
+	"of-water": "of Water",
 	"old-3": "Old +2",
 	"old-announcements": "Old Announcements",
 	"older": "[older]",
 	"on-mount": "On Mount",
 	"one-hand-abbr": "1H",
 	"other": "Other",
-	"out-of-food": "Out of Food",
-	"out-of-water": "Out of Water",
 	"out-of-arrows": "Out of Arrows",
+	"out-of-food": "Out of Food",
 	"out-of-torches": "Out of Torches",
+	"out-of-water": "Out of Water",
 	"pack-rat": "Pack Rat Talent?",
 	"pack-rat-title": "You can carry additional items.",
 	"parry": "Parry",
@@ -188,6 +195,7 @@
 	"pushes-the-roll": "Pushes the Roll",
 	"quantity-abbr": "Qty",
 	"range": "Range",
+	"ranged": "Ranged",
 	"rank": "Rank",
 	"rank-1-pack-rat": "Rank 1 (+2)",
 	"rank-2-pack-rat": "Rank 2 (+5)",
@@ -197,6 +205,7 @@
 	"relationship-description": "Describe the relationship.",
 	"relationships-u": "RELATIONSHIPS",
 	"reputation": "Reputation",
+	"reputation-bonus": "How well known are you? @{reputation}",
 	"reputation-roll": "Reputation Roll",
 	"reset-dice": "Reset dice pool.",
 	"roll": " Roll ",
@@ -209,6 +218,9 @@
 	"settings": "Settings",
 	"sheet-version-announcements": "Sheet version and announcements",
 	"shield": "Shield",
+	"shield-bonus-max": "Record the shield's UNDAMAGED bonus. @{shield1_bonus_max}",
+	"shield-bonus-misc": "Miscellaneous bonus modifier (adjusts GEAR dice). @{shield1_bonus_misc}",
+	"shield-bonus-total": "Total GEAR dice included for Parry|Shove. @{shield1_bonus_total}",
 	"shield-u": "SHIELD",
 	"short": "Short",
 	"shove": "Shove",
@@ -259,16 +271,27 @@
 	"weapon": "Weapon",
 	"weapon-bonus": "Record the weapon's current bonus. @{repeating_weapons_$X_weapon_bonus}",
 	"weapon-bonus-max": "Record the weapon's undamaged bonus. @{repeating_weapons_$X_weapon_bonus|max}",
+	"weapon-bonus-misc": "Miscellaneous bonus modifier (adjusts GEAR dice). @{repeating_weapons_$X_weapon_bonus_misc}",
+	"weapon-bonus-total": "Total GEAR dice included with the attack. @{repeating_weapons_$X_weapon_bonus_total}",
+	"weapon-damage": "Damage as per weapon tables. @{repeating_weapons_$X_weapon_damage}",
+	"weapon-damage-misc": "Miscellaneous damage modifier. @{repeating_weapons_$X_weapon_damage_misc}",
+	"weapon-damage-total": "Total damage included with the attack. @{repeating_weapons_$X_weapon_damage_total}",
+	"weapon-skill-misc": "Miscellaneous attack modifier (adjusts SKILL dice). @{repeating_weapons_$X_weapon_skill_misc}",
+	"weapon-skill-total": "Total SKILL dice included with the attack. @{repeating_weapons_$X_weapon_skill_total}",
+	"weapon-type-base": "BASE dice as per weapon/skill type. @{repeating_weapons_$X_weapon_base_total}",
+	"weapon-type-skill": "SKILL dice as per weapon/skill type. @{repeating_weapons_$X_weapon_skill_value}",
 	"weapon-u": "WEAPONS",
 	"weapons": "Weapons",
 	"weight-abbr": "Wt",
+	"whisper-nothing": "Do not whisper rolls(default).",
 	"whisper-options": "Whisper Options:",
 	"whisper-options-api": "API Whisper Options:",
-	"whisper-nothing": "Do not whisper rolls(default).",
-	"whisper-rolls": "Whisper all rolls to the GM.",
 	"whisper-query": "Use a query.",
+	"whisper-rolls": "Whisper all rolls to the GM.",
 	"willpower": "Willpower",
 	"willpower-abbr": "Will",
+	"willpower-spent-abbr": "WP Spent",
+	"willpower-total-abbr": "Total WP",
 	"willpower-u": "WILLPOWER",
 	"wits": "Wits",
 	"wits-abbr": " [wit]",
