--- a/Night Witches/translations/es.json
+++ b/Night Witches/translations/es.json
@@ -64,7 +64,7 @@
     "skill": "habilidad",
     "squadroncommander": "COMANDANTE DEL ESCUADRÓN:",
     "squadronleadnavigator": "NAVEGANTE PRINCIPAL DEL ESCUADRÓN:",
-    "stats": "Características",
+    "stats": "Caract.",
     "stressed": "Estresada. El descanso y la tranquilidad lo eliminan.",
     "sufferthdeath": "SUFRES LA MUERTE DE UN AMIGO O AMANTE.",
     "tellastoryofhome": "CUENTAS UNA HISTORIA DEL HOGAR.",
