uc-957 weekly translations

--- a/Forbidden_Lands/translations/fr.json
+++ b/Forbidden_Lands/translations/fr.json
@@ -18,7 +18,7 @@
 	"armor-rating-abbr": "IA",
 	"armor-rating-u": "INDICE D'ARMURE",
 	"armor-roll": "Jet d'armure",
-	"armor-type": "Armor Type",
+	"armor-type": "Type d'Armure",
 	"arms-length-abbr": "Long. Bras",
 	"arrows": "Flèches",
 	"artifact": "Artéfact",
@@ -140,7 +140,7 @@
 	"might": "Puissance",
 	"might-monster": "Puissance",
 	"mighty": "Puissant",
-	"misc-abbr": "Misc",
+	"misc-abbr": "Divers",
 	"monster": "Monstre",
 	"monster-attack": "Attaque du monstre",
 	"monster-attacks-u": "ATTAQUES DU MONSTRE",
@@ -195,7 +195,7 @@
 	"pushes-the-roll": "Pousser les dés ",
 	"quantity-abbr": "Qté",
 	"range": "Portée",
-	"ranged": "Ranged",
+	"ranged": "À distance",
 	"rank": "Rang",
 	"rank-1-pack-rat": "Rang 1 (+2)",
 	"rank-2-pack-rat": "Rang 2 (+5)",
@@ -205,7 +205,7 @@
 	"relationship-description": "Décrit la relation.",
 	"relationships-u": "RELATIONS",
 	"reputation": "Réputation",
-	"reputation-bonus": "How well known are you? @{reputation}",
+	"reputation-bonus": "À quel point êtes vous connu? @{reputation}",
 	"reputation-roll": "Jet de Réputation",
 	"reset-dice": "Réinitialiser la réserve de dés.",
 	"roll": " Jet ",
@@ -290,8 +290,8 @@
 	"whisper-rolls": "Murmurer tous les jets au MJ.",
 	"willpower": "Volonté",
 	"willpower-abbr": "Vol",
-	"willpower-spent-abbr": "WP Spent",
-	"willpower-total-abbr": "Total WP",
+	"willpower-spent-abbr": "VOL dépensée",
+	"willpower-total-abbr": "VOL Total",
 	"willpower-u": "VOLONTÉ",
 	"wits": "Esprit",
 	"wits-abbr": " [esp]",
