--- a/Forbidden_Lands/translations/zu.json
+++ b/Forbidden_Lands/translations/zu.json
@@ -2,7 +2,7 @@
 	"adult-2": "crwdns131294:0crwdne131294:0",
 	"age": "crwdns90782:0crwdne90782:0",
 	"agility": "crwdns90784:0crwdne90784:0",
-	"agility-abbr": "crwdns90786:0[agl]crwdne90786:0",
+	"agility-abbr": "crwdns138355:0crwdne138355:0",
 	"agility-abbr-u": "crwdns90788:0crwdne90788:0",
 	"animal-handling": "crwdns90790:0crwdne90790:0",
 	"api-dice": "crwdns90792:0crwdne90792:0",
@@ -82,7 +82,7 @@
 	"duration": "crwdns90880:0crwdne90880:0",
 	"effects": "crwdns90882:0crwdne90882:0",
 	"empathy": "crwdns90884:0crwdne90884:0",
-	"empathy-abbr": "crwdns90886:0[emp]crwdne90886:0",
+	"empathy-abbr": "crwdns138357:0crwdne138357:0",
 	"encumbrance": "crwdns90888:0crwdne90888:0",
 	"encumbrance-current-abbr": "crwdns131310:0crwdne131310:0",
 	"endurance": "crwdns90890:0crwdne90890:0",
@@ -241,7 +241,7 @@
 	"stockpile-u": "crwdns91094:0crwdne91094:0",
 	"stone": "crwdns91096:0crwdne91096:0",
 	"strength": "crwdns91098:0crwdne91098:0",
-	"strength-abbr": "crwdns91100:0[str]crwdne91100:0",
+	"strength-abbr": "crwdns138359:0crwdne138359:0",
 	"strength-abbr-u": "crwdns91102:0crwdne91102:0",
 	"stronghold": "crwdns110258:0crwdne110258:0",
 	"stronghold-notes-u": "crwdns91104:0crwdne91104:0",
@@ -294,7 +294,7 @@
 	"willpower-total-abbr": "crwdns137763:0crwdne137763:0",
 	"willpower-u": "crwdns91146:0crwdne91146:0",
 	"wits": "crwdns91148:0crwdne91148:0",
-	"wits-abbr": "crwdns91150:0[wit]crwdne91150:0",
+	"wits-abbr": "crwdns138361:0crwdne138361:0",
 	"wood": "crwdns91152:0crwdne91152:0",
 	"wool": "crwdns91154:0crwdne91154:0",
 	"yes": "crwdns91156:0crwdne91156:0",
