--- a/L5R 5th Edition Unofficial/translations/es.json
+++ b/L5R 5th Edition Unofficial/translations/es.json
@@ -4,11 +4,11 @@
 	"clan-u": "Clan",
 	"family-u": "Familia",
 	"school-u": "Escuela",
-	"school-rank-u": "N. escuela",
+	"school-rank-u": "Niv. escuela",
 	"roles-u": "Roles",
 	"honour-u": "Honor",
 	"glory-u": "Gloria",
-	"status-u": "Status",
+	"status-u": "Estatus",
 	"advantages-disadvantages-u": "Ventajas y desventajas",
 	"skills-u": "Habilidades",
 	"techniques-u": "Técnicas",
@@ -29,10 +29,10 @@
 	"max-u": "Máx",
 	"ninjo-u": "Ninjo",
 	"giri-u": "Giri",
-	"distinctions-u": "Distinctions",
-	"adversities-u": "Adversities",
-	"passions-u": "Passions",
-	"anxieties-u": "Anxieties",
+	"distinctions-u": "Distinciones",
+	"adversities-u": "Adversidades",
+	"passions-u": "Pasiones",
+	"anxieties-u": "Ansiedades",
 	"personality-habits-quirks-u": "Personality, Habits & Quirks",
 	"stances-u": "Actitudes",
 	"stances-text-u": "(Las actitudes sólo se aplican durante los enfrentamientos)",
@@ -54,55 +54,55 @@
 	"composition-u": "Composición",
 	"design-u": "Diseño",
 	"smithing-u": "Herrería",
-	"refine-u": "Refine",
-	"restore-u": "Restore",
-	"invent-u": "Invent",
-	"adapt-u": "Adapt",
-	"attune-u": "Attune",
+	"refine-u": "Refinamiento",
+	"restore-u": "Restauración",
+	"invent-u": "Invención",
+	"adapt-u": "Adaptación",
+	"attune-u": "Sintonización",
 	"social-u": "Sociales",
 	"command-u": "Mando",
 	"courtesy-u": "Cortesía",
 	"games-u": "Pasatiempos",
 	"performance-u": "Interpretación",
-	"trick-u": "Trick",
-	"reason-u": "Reason",
-	"incite-u": "Incite",
-	"charm-u": "Charm",
-	"enlighten-u": "Enlighten",
+	"trick-u": "Engaño",
+	"reason-u": "Razonamiento",
+	"incite-u": "Incitación",
+	"charm-u": "Encanto",
+	"enlighten-u": "Iluminación",
 	"trade-u": "Mercantiles",
 	"commerce-u": "Comercio",
 	"labor-u": "Trabajo manual",
 	"seafaring-u": "Navegación",
 	"skulduggery-u": "Actividad Criminal",
 	"survival-u": "Supervivencia",
-	"con-u": "Con",
-	"produce-u": "Produce",
-	"innovate-u": "Innovate",
-	"exchange-u": "Exchange",
-	"subsist-u": "Subsist",
+	"con-u": "Estafa",
+	"produce-u": "Producción",
+	"innovate-u": "Idea",
+	"exchange-u": "Intercambio",
+	"subsist-u": "Subsistencia",
 	"martial-u": "Marciales",
 	"fitness-u": "Aptitud física",
 	"ma-melee-u": "Artes marciales [C.a.C.]",
-	"ma-ranged-u": "Artes marciales [Dist.]",
+	"ma-ranged-u": "Artes marciales [Distancia]",
 	"ma-unarmed-u": "Artes marciales [Sin. arm.]",
 	"meditation-u": "Meditación",
 	"tactics-u": "Estrategía",
-	"feint-u": "Feint",
-	"withstand-u": "Withstand",
-	"overwhelm-u": "Overwhelm",
-	"shift-u": "Shift",
-	"sacrifice-u": "Sacrifice",
+	"feint-u": "Amago",
+	"withstand-u": "Resistencia",
+	"overwhelm-u": "Abrumar",
+	"shift-u": "Alteración",
+	"sacrifice-u": "Sacrificio",
 	"scholar-u": "Académicas",
 	"culture-u": "Cultura",
 	"government-u": "Gobierno",
 	"medicine-u": "Medicina",
 	"sentiment-u": "Sentimiento",
 	"theology-u": "Teología",
-	"analyze-u": "Analyze",
-	"recall-u": "Recall",
-	"theorize-u": "Theorize",
-	"survey-u": "Survey",
-	"sense-u": "Sense",
+	"analyze-u": "Análisis",
+	"recall-u": "Recuerdo",
+	"theorize-u": "Teoría",
+	"survey-u": "Exámen",
+	"sense-u": "Percepción",
 	"explosive-success-u": "Éxito relanzable",
 	"opportunity-u": "Oportunidad",
 	"success-u": "Éxito",
@@ -121,12 +121,12 @@
 	"skill-restricitons-u": "Valor máximo 5",
 	"ring-restricitons-u": "Max = Void + lowest ring",
 	"technique-restricitons-u": "Observe School and technique restriction",
-	"rank-1-u": "Rank 1",
-	"rank-2-u": "Rank 2",
-	"rank-3-u": "Rank 3",
-	"rank-4-u": "Rank 4",
-	"rank-5-u": "Rank 5",
-	"rank-6-u": "Rank 6",
+	"rank-1-u": "Rango 1",
+	"rank-2-u": "Rango 2",
+	"rank-3-u": "Rango 3",
+	"rank-4-u": "Rango 4",
+	"rank-5-u": "Rango 5",
+	"rank-6-u": "Rango 6",
 	"exp-spent-rank-1-u": "EXP Spent on Rank 1 Teachings",
 	"exp-spent-rank-2-u": "EXP Spent on Rank 2 Teachings",
 	"exp-spent-rank-3-u": "EXP Spent on Rank 3 Teachings",
@@ -143,12 +143,12 @@
 	"extracurricular-advances-u": "Extracurricular Advances",
 	"title-advances-u": "Title Advances",
 	"total-exp-spent-title-u": "Total EXP Spent on Title",
-	"exp-spent-u": "Exp Spent",
-	"techniques-actions-u": "Techniques (New Actions)",
-	"name:-u": "Name:",
+	"exp-spent-u": "PE Gast.",
+	"techniques-actions-u": "Técnicas (Nuevas acciones)",
+	"name:-u": "Nombre:",
 	"page-number-u": "Page #:",
-	"effects-u": "Effects",
-	"effects-box-u": "Effects of technique",
+	"effects-u": "Efectos",
+	"effects-box-u": "Efectos de la técnica",
 	"new-opportunity-u": "New Opportunities",
 	"new-opportunity-box-u": "Add new opportunities",
 	"techniques-opportunities-u": "Techniques (New Actions)",
@@ -156,8 +156,8 @@
 	"check-u": "Check:",
 	"weapons-u": "Armas",
 	"damage-deadliness-u": "Damage/Deadliness",
-	"range-u": "Range",
-	"qualities-u": "Qualities",
+	"range-u": "Alcance",
+	"qualities-u": "Propiedades",
 	"armor-u": "Armadura",
 	"protection-type-resistance-u": "Protection Type (Resistance)",
 	"equipment-relationships-notes-u": "Equipment, Relationships & Notes",
@@ -169,8 +169,8 @@
 	"keep-up-to-u": "Guarda hasta",
 	"activation:-u": "Activation: ",
 	"check:-u": "Check:",
-	"effects:-u": "Effects:",
-	"opportunities:-u": "Opportunities:",
+	"effects:-u": "Efectos:",
+	"opportunities:-u": "Oportunidades:",
 	"dice-u": "dados",
 	"print-technique-u": "Print technique in chat",
 	"part-1-u": "PART I: CORE IDENTITY (CLAN & FAMILY)",
@@ -181,101 +181,101 @@
 	"part-6-u": "PART VI: ANCESTRY & FAMILY",
 	"part-7-u": "PART VII: DEATH",
 	"part-8-u": "PART VIII: GENERATE CHARACTER",
-	"question-1-u": "What clan does your character belong to? (p. 41)",
-	"question-2-u": "What family does your character belong to? (p. 49)",
-	"question-3-u": "What is your character’s school, and what roles does that school fall into? (p. 56)",
-	"question-4-u": "How does your character stand out within their school? (p. 88)",
-	"question-5-u": "Who is your lord and what is your character’s duty to them? (Select Giri) (p. 88)",
-	"question-6-u": "What does your character long for, and how might this impede their duty? (Select Ninjō) (p. 90)",
-	"question-7-u": "What is your character’s relationship with their clan? (p. 91)",
-	"question-8-u": "What does your character think of Bushidō? (p. 91)",
-	"question-9-u": "What is your character’s greatest accomplishment so far? (p. 92)",
-	"question-10-u": "What holds your character back the most in life? (p. 92)",
-	"question-11-u": "What activity most makes your character feel at peace? (p. 92)",
-	"question-12-u": "What concern, fear, or foible troubles your character the most? (p. 93)",
-	"question-13-u": "Who has your character learned the most from during their life? (p. 93)",
-	"question-14-u": "What do people notice first upon encountering your character? (p. 93)",
-	"question-15-u": "How does your character react to stressful situations? (p. 94)",
-	"question-16-u": "What are your character’s preexisting relationships with other clans, families, organizations, and traditions? (p. 94)",
-	"question-17-u": "How would your character’s parents describe them? (p. 95)",
-	"question-18-u": "Who was your character named to honour? (p. 95)",
-	"question-19-u": "What is your character’s personal name? (p. 95)",
-	"question-20-u": "How should your character die? (p. 95)",
-	"ring-increase-u": "Ring increase",
-	"choose-one-u": "Choose one",
-	"skill-increase-u": "Skill increase",
+	"question-1-u": "¿A qué clan pertenece tu personaje? (p. 41)",
+	"question-2-u": "¿A qué familia pertenece tu personaje? (p. 49)",
+	"question-3-u": "¿Cuál es la escuela de tu personaje, y qué funciones cumple esa escuela? (p. 56)",
+	"question-4-u": "¿De qué manera destaca tu personaje dentro de su escuela? (p. 88)",
+	"question-5-u": "¿Quién es tu señor, y cuál es el deber de tu personaje hacia él? (Seleccionar Giri) (p. 88)",
+	"question-6-u": "¿Qué es lo que anhela tu personaje, y cómo podría esto interferir con su deber? (Seleccionar Ninjō) (p. 90)",
+	"question-7-u": "¿Cuál es la relación de tu personaje con su clan? (p. 91)",
+	"question-8-u": "¿Qué piensa tu personaje acerca del Bushidō? (p. 91)",
+	"question-9-u": "¿Cuál ha sido el mayor logro de tu personaje hasta ahora? (p. 92)",
+	"question-10-u": "¿Qué es lo que frena más a tu personaje en la vida? (p. 92)",
+	"question-11-u": "¿ Qué actividad hace que tu personaje se sienta más en paz? (p. 92)",
+	"question-12-u": "¿Qué preocupación, miedo o debilidad perturba más a tu personaje? (p. 93)",
+	"question-13-u": "¿Quién ha sido la persona de la que más ha aprendido tu personaje en el transcurso de su vida? (p. 93)",
+	"question-14-u": "¿Qué es lo que advierte primero la gente al encontrarse con tu personaje? (p. 93)",
+	"question-15-u": "¿Cómo reacciona tu personaje ante situaciones de tensión? (p. 94)",
+	"question-16-u": "¿Cuáles son las relaciones previas de tu personaje con otros clanes, familias, organizaciones y tradiciones? (p. 94)",
+	"question-17-u": "¿Cómo describirían sus padres a tu personaje? (p. 95)",
+	"question-18-u": "¿En honor de quién se eligió el nombre de tu personaje? (p. 95)",
+	"question-19-u": "¿Cuál es el nombre personal de tu personaje? (p. 95)",
+	"question-20-u": "¿Cómo debería morir tu personaje? (p. 95)",
+	"ring-increase-u": "Incrementar anillo",
+	"choose-one-u": "Elegir uno",
+	"skill-increase-u": "Incrementar habilidad",
 	"starting-wealth-u": "Starting Wealth:",
-	"technique-types-available-u": "Technique types available",
+	"technique-types-available-u": "Tipos de técnicas disponibles",
 	"kata-u": "KATA",
 	"kiho-u": "KIHŌ",
-	"invocations-u": "INVOCATIONS",
-	"rituals-u": "RITUALS",
+	"invocations-u": "INVOCACIONES",
+	"rituals-u": "RITUALES",
 	"shui-u": "SHŪJI",
 	"maho-u": "MAHŌ",
 	"ninjutsu-u": "NINJUTSU",
-	"starting-techniques-u": "Starting techniques",
+	"starting-techniques-u": "Técnicas iniciales",
 	"school-ability-u": "School ability",
 	"starting-outfit-u": "Starting outfit",
 	"capital-or-u": "OR",
-	"glory-increase-u": "Glory increase",
-	"honour-increase-u": "Honour increase",
-	"distinction-u": "Distinction",
-	"passion-u": "Passion",
-	"anxiety-u": "Anxiety",
-	"adversity-u": "Adversity",
-	"disadvantage-u": "Disadvantage",
-	"advantage-u": "Advantage",
+	"glory-increase-u": "Incrementar gloria",
+	"honour-increase-u": "Incrementar Honor",
+	"distinction-u": "Distinción",
+	"passion-u": "Pasión",
+	"anxiety-u": "Ansiedad",
+	"adversity-u": "Adversidad",
+	"disadvantage-u": "Desventaja",
+	"advantage-u": "Ventaja",
 	"personal-accoutrement-u": "Personal accoutrement",
 	"item-rarity-lower-u": "Item (Rarity 7 or lower)",
-	"d10-result-u": "D10 result",
-	"20-qs-u": "20 Questions",
-	"twenty-questions-u": "Twenty Questions",
+	"d10-result-u": "Resultado D10",
+	"20-qs-u": "20 Preguntas",
+	"twenty-questions-u": "Veinte preguntas",
 	"20-qs-description-u": "You can use this to keep your notes of the twenty questions. The questions are found in the Core Rulebook with more detailed information (L5R RPG Core Rulebook, Chapter 2: Creating a Character p. 41–95)",
-	"20-qs-auto-generated-text-u": "At the end of this sheet there is a generate button that will fill in fields on the sheet. This will overwrite any earlier inputs, so use with care.",
-	"20-qs-generate-u": "Click to generate your character. Will overwrite earlier inputs in the sheet",
-	"generate-character-u": "Generate character",
-	"yes-u": "Yes",
-	"are-you-sure-u": "Are you sure?",
-	"damage-u": "Damage",
+	"20-qs-auto-generated-text-u": "Al final de esta hoja hay un botón de generar que rellenará los campos de la hoja. Esto sobrescribirá cualquier entrada anterior, así que úsalo con cuidado.",
+	"20-qs-generate-u": "Haz clic para generar tu personaje. Sobrescribirá las entradas anteriores en la hoja",
+	"generate-character-u": "Generar personaje",
+	"yes-u": "Si",
+	"are-you-sure-u": "¿Estás seguro?",
+	"damage-u": "Daño",
 	"deadliness-u": "Deadliness",
-	"grips-u": "Grips",
-	"damage:-u": "Damage:",
+	"grips-u": "Agarre",
+	"damage:-u": "Daño:",
 	"deadliness:-u": "Deadliness:",
-	"range:-u": "Range:",
-	"grips:-u": "Grips:",
-	"qualities:-u": "Qualities:",
-	"approach-u": "Approach",
+	"range:-u": "Alcance:",
+	"grips:-u": "Agarre:",
+	"qualities:-u": "Propiedades:",
+	"approach-u": "Planteamiento",
 	"none-u": "None",
-	"this-is-how-you-should-die-u": "This is how you should die",
+	"this-is-how-you-should-die-u": "Así es como deberías morir",
 	"koku-u": "Koku",
 	"bu-u": "Bu",
 	"zeni-u": "Zeni",
 	"wealth-u": "Riqueza",
-	"wealth-conversion-koku-rice-u": "1 Koku = 1 year of rice",
+	"wealth-conversion-koku-rice-u": "1 Koku = 1 año de arroz",
 	"wealth-conversion-koku-bu-u": "1 Koku = 5 Bu",
 	"wealth-conversion-bu-zeni-u": "1 Bu = 10 Zeni",
 	"relationships-u": "Relaciones",
-	"notes-u": "Notes",
-	"character-description-u": "Character description",
-	"demeanor-ambitious-u": "Ambitious - Fire +2, Water -2",
-	"demeanor-assertive-u": "Assertive - Earth +2, Air -2",
+	"notes-u": "Notas",
+	"character-description-u": "Descripción del personaje",
+	"demeanor-ambitious-u": "Ambicioso - Fuego +2, Agua -2",
+	"demeanor-assertive-u": "Firme - Tierra +2, Aire -2",
 	"demeanor-covetous-u": "Covetous - Earth +2, Water -2",
 	"demeanor-curious-u": "Curious - Void +2, Air -2",
-	"demeanor-detached-u": "Detached - Fire +1, Earth -1",
+	"demeanor-detached-u": "Despegado - Fuego +1, Tierra -1",
 	"demeanor-fanatical-u": "Fanatical - Earth +2, Air -1",
-	"demeanor-gruff-u": "Gruff - Air +2, Earth -2",
+	"demeanor-gruff-u": "Hosco - Aire +2, Tierra -2",
 	"demeanor-inquisitive-u": "Inquisitive - Earth +2, Air -2",
 	"demeanor-intimidating-u": "Intimidating - Fire +1, Air -1",
 	"demeanor-scheming-u": "Scheming - Fire +2, Water -1",
-	"demeanor-shrewd-u": "Shrewd - Air +2, Fire -2",
+	"demeanor-shrewd-u": "Artero - Aire +2, Fuego -2",
 	"demeanor-skittish-u": "Skittish - Fire +2, Earth -2",
 	"demeanor-territorial-u": "Territorial - Fire +2, Air -2",
-	"demeanor-custom-u": "Custom demeanor",
-	"choose-demeanor-u": "Choose demeanor",
+	"demeanor-custom-u": "Personalizar conducta",
+	"choose-demeanor-u": "Elegir conducta",
 	"dice-rolling-u": "Tirar dados",
-	"action-parentheses-u": "(Action)",
-	"opportunity-parentheses-u": "(Opportunity)",
+	"action-parentheses-u": "(Acción)",
+	"opportunity-parentheses-u": "(Oportunidad)",
 	"activation-box-u": "Requirement for activation",
-	"type:-u": "Type:",
+	"type:-u": "Tipo:",
 	"print-u": "Print"
 }
