--- a/Warhammer 4e Character Sheet/translations/ko.json
+++ b/Warhammer 4e Character Sheet/translations/ko.json
@@ -147,6 +147,7 @@
 	"WOUNDS": "Wounds",
 	"DAMAGE": "Damage",
 	"CRITICALS": "Criticals",
+	"CRITICALSANDINJURIES": "Criticals & Injuries",
 	"CRITICAL": "Critical",
 	"BROKEN": "Broken",
 	"TORN": "Torn",
