--- a/Warhammer 4e Character Sheet/translations/zu.json
+++ b/Warhammer 4e Character Sheet/translations/zu.json
@@ -147,6 +147,7 @@
 	"WOUNDS": "crwdns134385:0crwdne134385:0",
 	"DAMAGE": "crwdns134387:0crwdne134387:0",
 	"CRITICALS": "crwdns134389:0crwdne134389:0",
+	"CRITICALSANDINJURIES": "crwdns137781:0crwdne137781:0",
 	"CRITICAL": "crwdns134391:0crwdne134391:0",
 	"BROKEN": "crwdns134393:0crwdne134393:0",
 	"TORN": "crwdns134395:0crwdne134395:0",
