--- a/AW2E/translations/zh.json
+++ b/AW2E/translations/zh.json
@@ -3,36 +3,36 @@
 	"advance-3basicmoves": "choose 3 basic moves and advance them.",
 	"advance-3other-moves": "advance the other 3 basic moves.",
 	"amenities": "Amenities",
-	"angel": "Angel",
+	"angel": "天使",
 	"armor": "Armor",
 	"atmosphere": "Atmosphere",
 	"attractions": "Attractions",
 	"back-minus-harm": "Come back with -1hard",
 	"back-minus-weird": "Come back with +1weird",
 	"barter": "Barter",
-	"battlebabe": "Battlebabe",
-	"brainer": "Brainer",
+	"battlebabe": "戰鬥寶貝",
+	"brainer": "開智者",
 	"but": "But",
 	"change-char-type": "change your character to a new type",
 	"change-playbook": "Change to a new Playbook",
 	"child-thing": "Child-Thing",
-	"chopper": "Chopper",
+	"chopper": "飛車黨",
 	"chosen-friends": "Chosen Friends",
-	"playbook-archetype": "Playbook",
-	"playbook-moves": "Playbook Moves",
+	"playbook-archetype": "遊玩書",
+	"playbook-moves": "遊玩書的動作",
 	"complications": "Complications",
-	"cool": "Cool",
+	"cool": "冷靜",
 	"crew-contacts": "Crew Contacts",
 	"custom-weapons": "Custom Weapons",
-	"description": "Description",
+	"description": "描述",
 	"die": "Die",
-	"do-something-under-fire": "do something under fire",
-	"driver": "Driver",
+	"do-something-under-fire": "忍耐做某些事",
+	"driver": "車手",
 	"emerged-stasis": "You emerged from stasis",
 	"erase-holding-option": "erase an option from your holding",
 	"establishment": "Establishment",
 	"establishment-security": "add a security to your establishment",
-	"experience": "Experience",
+	"experience": "經驗",
 	"faceless": "Faceless",
 	"features": "Features",
 	"follower_barter": "Follower Barter",
@@ -67,72 +67,72 @@
 	"get-move-savvyhead": "get a new savvyhead move",
 	"get-move-skinner": "get a new skinner move",
 	"get-move-waterbearer": "get a new waterbearer move",
-	"get-plus-cool-max2": "get +1cool (max cool+2)",
-	"get-plus-cool-max3": "get +1cool (max cool+3)",
-	"get-plus-hard-max2": "get +1hard (max hard+2)",
-	"get-plus-hard-max3": "get +1hard (max hard+3)",
-	"get-plus-hot-max2": "get +1hot (max hot+2)",
-	"get-plus-hot-max3": "get +1hot (max hot+3)",
-	"get-plus-sharp-max2": "get +1sharp (max sharp+2)",
-	"get-plus-sharp-max3": "get +1sharp (max sharp+3)",
-	"get-plus-stat-max3": "get +1 to any stat (max stat+3)",
-	"get-plus-weird-max2": "get +1weird (max weird+2)",
-	"get-plus-weird-max3": "get +1weird (max weird+3)",
+	"get-plus-cool-max2": "得到 +1冷靜 (最多 冷靜+2)",
+	"get-plus-cool-max3": "得到 +1冷靜 (最多 冷靜+3)",
+	"get-plus-hard-max2": "得到 +1硬派 (最多 硬派+2)",
+	"get-plus-hard-max3": "得到 +1硬派 (最多 硬派+3)",
+	"get-plus-hot-max2": "得到 +1惹火 (最多 惹火+2)",
+	"get-plus-hot-max3": "得到 +1惹火 (最多 惹火+3)",
+	"get-plus-sharp-max2": "得到 +1機靈 (最多 機靈+2)",
+	"get-plus-sharp-max3": "得到 +1機靈 (最多 機靈+3)",
+	"get-plus-stat-max3": "得到 +1任意屬性 (最多 屬性+3)",
+	"get-plus-weird-max2": "得到 +1怪誕 (最多 怪誕+2)",
+	"get-plus-weird-max3": "得到 +1怪誕 (最多 怪誕+3)",
 	"get-supplier": "get a supplier (cf, detail with the MC)",
 	"get-vehicle": "get a new vehicle (you detail)",
 	"get-vehicle-combat-driver": "get a vehicle (you detail) and Combat Driver",
 	"get-vehicle-new": "get a vehicle (you detail)",
 	"get-workspace-2options": "get a workspace (you detail) or add 2 options to your workspace",
 	"gigs": "Gigs",
-	"go-aggro": "go aggro/seize by force",
-	"gunlugger": "GunLugger",
-	"hard": "Hard",
-	"hardholder": "Hardholder",
-	"harm": "Harm",
-	"highlighted": "Highlighted",
-	"hocus": "Hocus",
+	"go-aggro": "去激怒/seize by force",
+	"gunlugger": "槍手",
+	"hard": "硬派",
+	"hardholder": "霸主",
+	"harm": "傷害時計",
+	"highlighted": "高亮",
+	"hocus": "教主",
 	"hold": "Hold",
 	"holding": "Holding",
 	"holding-size": "Size",
-	"hot": "Hot",
-	"hx": "Hx",
-	"hx-notes": "Hx Notes",
-	"improvements": "Improvements",
+	"hot": "惹火",
+	"hx": "歷史",
+	"hx-notes": "歷史筆記",
+	"improvements": "升級",
 	"interested-parties": "Interested Parties",
 	"laws": "Laws",
 	"life-untenable": "When Life is Untenable",
-	"lock-unlock-playbook": "Lock/Unlock Playbook",
+	"lock-unlock-playbook": "鎖定/解鎖 遊玩書",
 	"look": "Look",
 	"looks": "Looks",
 	"maestro-d": "Maestro D",
-	"misses": "Misses",
-	"move": "Move",
-	"name": "Name",
+	"misses": "失誤",
+	"move": "動作",
+	"name": "姓名",
 	"news": "News",
-	"open-your-brain": "open your brain",
+	"open-your-brain": "打開腦門",
 	"other": "Other",
-	"other-moves": "Other Moves",
+	"other-moves": "其他動作",
 	"penalties": "Penalties",
 	"people-connections": "People with Connections",
 	"phase1-add-improvements": "Add all these improvements manually into your stats, they will not be auto-calculated",
 	"power": "Power",
 	"puppet-strings": "Puppet Strings",
 	"quarantine": "The Quarantine",
-	"read-a-sitch": "read a sitch; read a person",
+	"read-a-sitch": "解讀情況; 解讀個人",
 	"regulars": "Regulars",
 	"remaining-stasis": "Remaining in Stasis",
 	"resolve-interest-establishment": "resolve somebody's interest in your establishment",
 	"retire-char-safety": "retire your character (to safety)",
-	"roll-your-hx": "roll your Hx",
-	"rolls": "rolls",
-	"savvyhead": "SavvyHead",
+	"roll-your-hx": "擲骰你的歷史",
+	"rolls": "擲骰",
+	"savvyhead": "技師",
 	"second-char": "create a second character to play",
 	"security": "Security",
-	"seduce-or-manipulate": "seduce or manipulate",
-	"sharp": "Sharp",
-	"show-hide-improvements": "Show/Hide Improvements",
+	"seduce-or-manipulate": "勾引或操縱",
+	"sharp": "機靈",
+	"show-hide-improvements": "顯示/隱藏 升級資訊",
 	"size": "Size",
-	"skinner": "Skinner",
+	"skinner": "藝術家",
 	"source": "Source",
 	"source-2features": "add 2 features to the source",
 	"source-laws": "change the laws and penalties of the source",
@@ -140,13 +140,13 @@
 	"spend_1_barter_to_replenish_1_stock": "Spend 1 Barter to replenish 1 Stock",
 	"stasis": "Stasis",
 	"stasis-facilities": "Stasis Facilities",
-	"stat": "Stat",
-	"stats": "Stats",
+	"stat": "屬性",
+	"stats": "屬性",
 	"stock": "Stock",
 	"strength": "Strength",
 	"studio": "Studio",
-	"succeeds": "Succeeds",
-	"succeeds-partially": "Succeeds partially",
+	"succeeds": "成功",
+	"succeeds-partially": "部份成功",
 	"suffer-harm": "suffer harm",
 	"surplus": "Surplus",
 	"tags": "Tags",
@@ -158,7 +158,7 @@
 	"want": "Want",
 	"waterbearer": "Waterbearer",
 	"weaknesses": "Weaknesses",
-	"weird": "Weird",
+	"weird": "怪誕",
 	"wolves-maelstrom": "Wolves of the Maelstrom",
 	"workspace-lifesupport": "add life support to your workspace, and now you can work on people there too",
 	"your-bike": "Your Bike",
