--- a/AW2E/translations/zh.json
+++ b/AW2E/translations/zh.json
@@ -1,20 +1,20 @@
 {
 	"add-workspace-2options": "add 2 options to your workspace",
-	"advance-3basicmoves": "choose 3 basic moves and advance them.",
-	"advance-3other-moves": "advance the other 3 basic moves.",
+	"advance-3basicmoves": "選擇 3 個基礎動作並升級他們。",
+	"advance-3other-moves": "升級另外 3 個基礎動作。",
 	"amenities": "Amenities",
 	"angel": "天使",
-	"armor": "Armor",
+	"armor": "護甲",
 	"atmosphere": "Atmosphere",
 	"attractions": "Attractions",
-	"back-minus-harm": "Come back with -1hard",
-	"back-minus-weird": "Come back with +1weird",
-	"barter": "Barter",
+	"back-minus-harm": "返回帶著 -1硬派",
+	"back-minus-weird": "返回帶著 +1怪誕(最大 +3)",
+	"barter": "易貨",
 	"battlebabe": "戰鬥寶貝",
 	"brainer": "開智者",
-	"but": "But",
-	"change-char-type": "change your character to a new type",
-	"change-playbook": "Change to a new Playbook",
+	"but": "但是",
+	"change-char-type": "改變角色成一個新類別",
+	"change-playbook": "換一個新的遊玩書",
 	"child-thing": "Child-Thing",
 	"chopper": "飛車黨",
 	"chosen-friends": "Chosen Friends",
@@ -22,51 +22,51 @@
 	"playbook-moves": "遊玩書的動作",
 	"complications": "Complications",
 	"cool": "冷靜",
-	"crew-contacts": "Crew Contacts",
-	"custom-weapons": "Custom Weapons",
+	"crew-contacts": "成員聯繫人",
+	"custom-weapons": "客製武器",
 	"description": "描述",
-	"die": "Die",
-	"do-something-under-fire": "忍耐做某些事",
+	"die": "死亡",
+	"do-something-under-fire": "忍耐下行動",
 	"driver": "車手",
 	"emerged-stasis": "You emerged from stasis",
-	"erase-holding-option": "erase an option from your holding",
+	"erase-holding-option": "從你的持有刪除一個選項",
 	"establishment": "Establishment",
 	"establishment-security": "add a security to your establishment",
 	"experience": "經驗",
 	"faceless": "Faceless",
 	"features": "Features",
-	"follower_barter": "Follower Barter",
-	"followers": "Followers",
-	"followers-newoption": "choose a new option for your followers",
+	"follower_barter": "追隨者易貨",
+	"followers": "追隨者",
+	"followers-newoption": "替你的追隨者選擇新的選項",
 	"fortune": "Fortune",
 	"frame": "Frame",
-	"gang": "Gang",
-	"gang-new-option": "choose a new option for your gang",
-	"gear-barter": "Gear &amp; Barter",
-	"get-2brainer-gear": "get 2 new or relacement brainer gear (you choose)",
-	"get-ally": "get an ally (cf, detail with the MC)",
+	"gang": "幫派",
+	"gang-new-option": "替你的幫派選擇新的選項",
+	"gear-barter": "裝備 &amp; 易貨",
+	"get-2brainer-gear": "獲得 2 個新的或更換開智者裝備（你選擇）",
+	"get-ally": "得到一個盟友 (參考，MC 提供詳細)",
 	"get-establishment": "get an establishment (detail)",
 	"get-followers-fortune": "get followers (you detail) and Fortunes",
 	"get-gang-alpha": "get a gang (detail) and Pack Alpha",
-	"get-gang-leadership": "get a gang (detail) and Leadership",
+	"get-gang-leadership": "得到一個幫派(你提供詳細)並領導",
 	"get-gang-security-leadership": "get a gang (detail) for security, and Leadership",
 	"get-garage-crew": "get a garage (workspace, detail) and crew",
-	"get-holding-newoption": "choose a new option for your holding",
-	"get-holding-wealth": "get a holding (detail) and Wealth",
-	"get-move-angel": "get a new angel move",
-	"get-move-battlebabe": "get a new battlebabe move",
-	"get-move-brainer": "get a new brainer move",
-	"get-move-child": "get a new child-thing move",
-	"get-move-driver": "get a new driver move",
-	"get-move-faceless": "get a new faceless move",
-	"get-move-gunlugger": "get a new gunlugger move",
-	"get-move-hocus": "get a new hocus move",
-	"get-move-maestro": "get a new maestro d' move",
-	"get-move-news": "get a new news move",
-	"get-move-other": "get a move from another playbook",
-	"get-move-savvyhead": "get a new savvyhead move",
-	"get-move-skinner": "get a new skinner move",
-	"get-move-waterbearer": "get a new waterbearer move",
+	"get-holding-newoption": "選擇一個新的選項給你的持有",
+	"get-holding-wealth": "得到一個持有(你提供詳細)和財富",
+	"get-move-angel": "獲得新的 天使動作",
+	"get-move-battlebabe": "獲得新的 戰鬥寶貝動作",
+	"get-move-brainer": "獲得新的 開智者動作",
+	"get-move-child": "獲得新的 child-thing move",
+	"get-move-driver": "獲得新的 車手動作",
+	"get-move-faceless": "獲得新的 faceless move",
+	"get-move-gunlugger": "獲得新的 槍手動作",
+	"get-move-hocus": "獲得新的 教主動作",
+	"get-move-maestro": "獲得新的 maestro d' 動作",
+	"get-move-news": "獲得新的 news move",
+	"get-move-other": "從其他遊玩書獲得動作",
+	"get-move-savvyhead": "獲得新的 技師動作",
+	"get-move-skinner": "獲得新的 藝術家動作",
+	"get-move-waterbearer": "獲得新的 waterbearer move",
 	"get-plus-cool-max2": "得到 +1冷靜 (最多 冷靜+2)",
 	"get-plus-cool-max3": "得到 +1冷靜 (最多 冷靜+3)",
 	"get-plus-hard-max2": "得到 +1硬派 (最多 硬派+2)",
@@ -78,32 +78,32 @@
 	"get-plus-stat-max3": "得到 +1任意屬性 (最多 屬性+3)",
 	"get-plus-weird-max2": "得到 +1怪誕 (最多 怪誕+2)",
 	"get-plus-weird-max3": "得到 +1怪誕 (最多 怪誕+3)",
-	"get-supplier": "get a supplier (cf, detail with the MC)",
-	"get-vehicle": "get a new vehicle (you detail)",
+	"get-supplier": "得到一個供應商 (參考，由 MC 提供詳細)",
+	"get-vehicle": "獲得新的 vehicle (you detail)",
 	"get-vehicle-combat-driver": "get a vehicle (you detail) and Combat Driver",
 	"get-vehicle-new": "get a vehicle (you detail)",
 	"get-workspace-2options": "get a workspace (you detail) or add 2 options to your workspace",
-	"gigs": "Gigs",
-	"go-aggro": "去激怒/seize by force",
+	"gigs": "演出",
+	"go-aggro": "去激怒/武力奪取",
 	"gunlugger": "槍手",
 	"hard": "硬派",
 	"hardholder": "霸主",
 	"harm": "傷害時計",
-	"highlighted": "高亮",
+	"highlighted": "強調",
 	"hocus": "教主",
-	"hold": "Hold",
-	"holding": "Holding",
-	"holding-size": "Size",
+	"hold": "財富",
+	"holding": "持有",
+	"holding-size": "大小",
 	"hot": "惹火",
 	"hx": "歷史",
 	"hx-notes": "歷史筆記",
 	"improvements": "升級",
 	"interested-parties": "Interested Parties",
 	"laws": "Laws",
-	"life-untenable": "When Life is Untenable",
+	"life-untenable": "當生命難以維持時",
 	"lock-unlock-playbook": "鎖定/解鎖 遊玩書",
-	"look": "Look",
-	"looks": "Looks",
+	"look": "外貌",
+	"looks": "外觀",
 	"maestro-d": "Maestro D",
 	"misses": "失誤",
 	"move": "動作",
@@ -114,7 +114,7 @@
 	"other-moves": "其他動作",
 	"penalties": "Penalties",
 	"people-connections": "People with Connections",
-	"phase1-add-improvements": "Add all these improvements manually into your stats, they will not be auto-calculated",
+	"phase1-add-improvements": "將所有升級手動添加到你的屬性中，它們不會自動計算",
 	"power": "Power",
 	"puppet-strings": "Puppet Strings",
 	"quarantine": "The Quarantine",
@@ -122,11 +122,11 @@
 	"regulars": "Regulars",
 	"remaining-stasis": "Remaining in Stasis",
 	"resolve-interest-establishment": "resolve somebody's interest in your establishment",
-	"retire-char-safety": "retire your character (to safety)",
+	"retire-char-safety": "角色退休（為了安全）",
 	"roll-your-hx": "擲骰你的歷史",
 	"rolls": "擲骰",
 	"savvyhead": "技師",
-	"second-char": "create a second character to play",
+	"second-char": "創建第二個角色遊玩",
 	"security": "Security",
 	"seduce-or-manipulate": "勾引或操縱",
 	"sharp": "機靈",
@@ -142,22 +142,22 @@
 	"stasis-facilities": "Stasis Facilities",
 	"stat": "屬性",
 	"stats": "屬性",
-	"stock": "Stock",
-	"strength": "Strength",
+	"stock": "庫存",
+	"strength": "長處",
 	"studio": "Studio",
 	"succeeds": "成功",
 	"succeeds-partially": "部份成功",
-	"suffer-harm": "suffer harm",
+	"suffer-harm": "承受傷害",
 	"surplus": "Surplus",
-	"tags": "Tags",
+	"tags": "標籤",
 	"under-disguises": "Under Their Disguises",
 	"unlock-stasis-facility": "unlock a stasis facility",
 	"unlocked-facilities": "Unlocked Facilities",
 	"unmasked": "Unmasked, You Are",
 	"untouched-why": "It's Untouched. Why?",
-	"want": "Want",
+	"want": "索求",
 	"waterbearer": "Waterbearer",
-	"weaknesses": "Weaknesses",
+	"weaknesses": "弱點",
 	"weird": "怪誕",
 	"wolves-maelstrom": "Wolves of the Maelstrom",
 	"workspace-lifesupport": "add life support to your workspace, and now you can work on people there too",
